Bug 330138 - Shortcuts do not work in table and form data views
Summary: Shortcuts do not work in table and form data views
Status: CLOSED FIXED
Alias: None
Product: KEXI
Classification: Applications
Component: Forms (other bugs)
Version First Reported In: 2.8 beta2
Platform: unspecified All
: NOR normal
Target Milestone: 2.8
Assignee: Jarosław Staniek
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-01-18 23:27 UTC by Jarosław Staniek
Modified: 2014-01-23 12:46 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.8.0 RC1
Sentry Crash Report:
staniek: Usability+


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jarosław Staniek 2014-01-18 23:27:41 UTC
In Kexi 2.x there's regression compared to Kexi 1.x. Shortcuts such as Shift+Return (save record edit) or Escape (cancel record edit) do not work in table and form data views.


Reproducible: Always
Comment 1 Thomas Pfeiffer 2014-01-19 22:58:56 UTC
Do you seek any kind of input from the usability team on this?
Comment 2 Jarosław Staniek 2014-01-20 23:07:50 UTC
Git commit a03d7bce258c92238194637fbbc1b5551d8d2a19 by Jaroslaw Staniek.
Committed on 19/01/2014 at 22:41.
Pushed by staniek into branch 'master'.

Make Shift+Return and Escape shortcuts work in table and form data views

In Kexi 2.x there's regression compared to Kexi 1.x. Shortcuts such as
Shift+Return (save record edit) or Escape (cancel field/record edit) do
not work in table and form data views.
REVIEW:115133

M  +1    -1    kexi/main/KexiMainWindow.cpp
M  +25   -0    kexi/widget/dataviewcommon/kexidataawareview.cpp
M  +2    -0    kexi/widget/dataviewcommon/kexidataawareview.h

http://commits.kde.org/calligra/a03d7bce258c92238194637fbbc1b5551d8d2a19
Comment 3 Jarosław Staniek 2014-01-20 23:08:02 UTC
Git commit 7a03810b0745f50ec6273019617b3f36de61de68 by Jaroslaw Staniek.
Committed on 19/01/2014 at 22:41.
Pushed by staniek into branch 'calligra/2.8'.

Make Shift+Return and Escape shortcuts work in table and form data views

In Kexi 2.x there's regression compared to Kexi 1.x. Shortcuts such as
Shift+Return (save record edit) or Escape (cancel field/record edit) do
not work in table and form data views.

M  +1    -1    kexi/main/KexiMainWindow.cpp
M  +25   -0    kexi/widget/dataviewcommon/kexidataawareview.cpp
M  +2    -0    kexi/widget/dataviewcommon/kexidataawareview.h

http://commits.kde.org/calligra/7a03810b0745f50ec6273019617b3f36de61de68
Comment 4 Jarosław Staniek 2014-01-23 12:46:31 UTC
@Thomas Pfeiffer
> Do you seek any kind of input from the usability team on this?

Not for this, thanks :)