Make Shift+Return and Escape shortcuts work in table and form data views

In Kexi 2.x there's regression compared to Kexi 1.x. Shortcuts such as
Shift+Return (save record edit) or Escape (cancel field/record edit) do
not work in table and form data views.

BUG:330138
REVIEW:115133